frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: frontend:apps/Deployment:default/frontend
    deployment.kubernetes.io/revision: "15"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"frontend:apps/Deployment:default/frontend"},"name":"frontend","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"frontend"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":0},"type":"RollingUpdate"},"template":{"metadata":{"annotations":{"deployed-by":"luisrodvillada","description":"Frontend service for Wellness Ops application"},"labels":{"app":"f [...]
  creationTimestamp: "2026-03-06T15:55:45Z"
  generation: 20
  name: frontend
  namespace: dev
  resourceVersion: "278434"
  uid: 7aeb0d0f-e39e-41af-a30a-bb451d077a89
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        deployed-by: luisrodvillada
        description: Frontend service for Wellness Ops application
        kubectl.kubernetes.io/restartedAt: "2026-03-11T12:51:15+01:00"
      labels:
        app: frontend
        env: dev
        version: v1.0.3
    spec:
      containers:
      - image: ghcr.io/luisrodvilladaorg/wellness-ops-frontend:v2.1.14
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: frontend-deployment
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-06T15:55:45Z"
    lastUpdateTime: "2026-03-17T12:48:01Z"
    message: ReplicaSet "frontend-55f5f8c58b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-03-19T09:35:57Z"
    lastUpdateTime: "2026-03-19T09:35:57Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 20
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
