frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
